# VulkanLearn2

./: .gitignore  CMakeLists.txt  README.md
assets/: config.xml  sponza.mtl
assets/sourceimages/: Arch_diffuse.tx  Arch_normal.tx  Arch_roughness.tga  Arch_roughness.tx  Ceiling_diffuse.tx  Ceiling_normal.tga  Ceiling_normal.tx  Ceiling_roughness.tga  Ceiling_roughness.tx  Chain_alpha.tga  Chain_alpha.tx  Chain_diffuse.tga  Chain_diffuse.tx  Chain_normal.tga  Chain_normal.tx  Chain_roughness.tga  Chain_roughness.tx  Column_A_diffuse.tx  Column_A_normal.tx  Column_A_roughness.tga  Column_A_roughness.tx  Column_B_diffuse.tx  Column_B_normal.tx  Column_B_roughness.tga  Column_B_roughness.tx  Column_C_diffuse.tx  Column_C_normal.tx  Column_C_roughness.tga  Column_C_roughness.tx  Curtain_blue_diffuse.tga  Curtain_green_diffuse.tga  Curtain_normal.tga  Curtain_red_diffuse.tga  Details_diffuse.tx  Details_metallic.tx  Details_normal.tga  Details_normal.tx  Details_roughness.tx  Drapes_Normal.tga  Drapes_Normal.tx  (+76 more)
shaders/: accumulate.frag  accumulate.frag.spv  ao_raytrace.h  ao_raytrace.rchit.spv  ao_raytrace.rgen  ao_raytrace.rgen.spv  ao_raytrace.rmiss  ao_raytrace.rmiss.spv  camera_ray_func.h  depthreduce.comp  depthreduce.comp.spv  drawHDRtoEnvMap.frag  drawHDRtoEnvMap.frag.spv  drawcmd.comp  drawcmd.comp.spv  filtercube.vert  filtercube.vert.spv  fullscreen.frag  fullscreen.frag.spv  fullscreen.vert  fullscreen.vert.spv  gbuffer.h  gbuffer_generate.frag  gbuffer_generate.frag.spv  gbuffer_generate.mesh  gbuffer_generate.mesh.spv  gbuffer_generate.task  gbuffer_generate.task.spv  gbuffer_raytrace.rgen  gbuffer_raytrace.rgen.spv  gbuffer_shading.frag  gbuffer_shading.frag.spv  gbuffer_shading.h  ggx_brdf.h  gi_raytrace.h  gi_raytrace.rgen  gi_raytrace.rgen.spv  gi_raytrace_func.h  ibl.h  indirect_raytrace.rchit  (+68 more)
shaders_slang/: NSCooperativeVectorDerivatives.slang  NS_Activation.slang  NS_CooperativeVectorAutoDiff.slang  NS_LinearOps.slang  NS_Loss.slang  NS_MLP.slang  NS_Optimizers.slang  NS_Utils.slang  brdf.h  fullscreen.vert.slang  fullscreen.vert.slang.glsl  fullscreen.vert.slang.spv  gbuffer_shading.frag.slang  gbuffer_shading.frag.slang.glsl  gbuffer_shading.frag.slang.spv  gbuffer_shading.frag.slang1  generate_flux.comp.slang  gi_pathtrace.h  indirect_raytrace_gbuffer.rahit.slang  indirect_raytrace_gbuffer.rahit.slang.glsl  indirect_raytrace_gbuffer.rahit.slang.spv  indirect_raytrace_gbuffer.rchit.slang  indirect_raytrace_gbuffer.rchit.slang.glsl  indirect_raytrace_gbuffer.rchit.slang.spv  indirect_raytrace_gbuffer.rmiss.slang  indirect_raytrace_gbuffer.rmiss.slang.glsl  indirect_raytrace_gbuffer.rmiss.slang.spv  network_config.h  nrc_inference.comp.slang  nrc_optimizer.comp.slang  nrc_training.comp.slang  nrc_training.comp.slang.spv  raytrace_reference.rgen.slang  raytrace_reference.rgen.slang.glsl  raytrace_reference.rgen.slang.spv  restirDISpacial.comp.slang  restirDITemporal.comp.slang  restirPTSpacial.rgen.slang  restirPTTemporal.comp.slang  restirShade.comp.slang  (+12 more)
src/: CMakeLists.txt  imgui_menu.h  vk_assimp_loader.cpp  vk_assimp_loader.h  vk_camera.cpp  vk_camera.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_command_pool.cpp  vk_command_pool.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_initializers.cpp  vk_initializers.h  vk_ioutils.cpp  vk_ioutils.h  vk_light_manager.cpp  vk_light_manager.h  vk_logger.cpp  vk_logger.h  vk_material_system.cpp  vk_material_system.h  vk_mesh.cpp  vk_mesh.h  vk_raytracer_builder.cpp  vk_raytracer_builder.h  vk_render_graph.cpp  vk_render_graph.h  vk_render_pass.cpp  vk_render_pass.h  vk_render_passes.cpp  vk_render_passes.h  vk_render_pipeline.cpp  vk_render_pipeline.h  vk_resource_manager.cpp  vk_resource_manager.h  (+9 more)
src/graphic_pipeline/: vbuffer_graphics_pipeline.cpp  vbuffer_graphics_pipeline.h  vk_ao_raytrace_graphics_pipeline.cpp  vk_ao_raytrace_graphics_pipeline.h  vk_flux_generation.cpp  vk_flux_generation.h  vk_fullscreen_graphics_pipeline.cpp  vk_fullscreen_graphics_pipeline.h  vk_gbuffer_graphics_pipeline.cpp  vk_gbuffer_graphics_pipeline.h  vk_gbuffer_shading_graphics_pipeline.cpp  vk_gbuffer_shading_graphics_pipeline.h  vk_gi_raytrace_graphics_pipeline.cpp  vk_gi_raytrace_graphics_pipeline.h  vk_ibl_maps_generator_graphics_pipeline.cpp  vk_ibl_maps_generator_graphics_pipeline.h  vk_light_debug_graphic_pipeline.cpp  vk_light_debug_graphic_pipeline.h  vk_nrc_inference.cpp  vk_nrc_inference.h  vk_nrc_optimize.cpp  vk_nrc_optimize.h  vk_nrc_training.cpp  vk_nrc_training.h  vk_pathtrace_gbuffer.cpp  vk_pathtrace_gbuffer.h  vk_pathtrace_reference.cpp  vk_pathtrace_reference.h  vk_pathtracer_graphics_pipeline.cpp  vk_pathtracer_graphics_pipeline.h  vk_raytrace_graphic_pipeline.cpp  vk_raytrace_graphic_pipeline.h  vk_raytrace_reflection.cpp  vk_raytrace_reflection.h  vk_raytracer_denoiser_pass.cpp  vk_raytracer_denoiser_pass.h  vk_restir_di_init_pass.cpp  vk_restir_di_init_pass.h  vk_restir_gi_spacial_reuse_pass.cpp  vk_restir_gi_spacial_reuse_pass.h  (+22 more)
src/neural_shading/: CoopVector.cpp  CoopVector.h  NetworkConfig.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTypes.h  NeuralRadianceCache.cpp  NeuralRadianceCache.h
src/sl_wrapper/: SLWrapper.cpp  SLWrapper.h
src/sys_config/: Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  XPath.cpp  XPath.h  tinyxml2.cpp  vk_strings.h
src/sys_event/: Delegate.h  EventManager.cpp  EventManager.h
